@@ -15,4 +15,24 @@ public class Vector2Test {
 	public void testFromString () {
 		assertEquals(new Vector2(-5f, 42.00055f), new Vector2().fromString("(-5,42.00055)"));
 	}
+
+	@Test
+	public void testAngle() {
+		assertEquals(270f, new Vector2(0, -1f).angleDeg(), MathUtils.FLOAT_ROUNDING_ERROR);
+	}
+
+	@Test
+	public void testAngleRelative() {
+		assertEquals(270f, new Vector2(0, -1f).angleDeg(Vector2.X), MathUtils.FLOAT_ROUNDING_ERROR);
+	}
+
+	@Test
+	public void testAngleRad() {
+		assertEquals(- MathUtils.PI / 2f, new Vector2(0, -1f).angleRad(), MathUtils.FLOAT_ROUNDING_ERROR);
+	}
+
+	@Test
+	public void testAngleRadRelative() {
+		assertEquals(- MathUtils.PI / 2f, new Vector2(0, -1f).angleRad(Vector2.X), MathUtils.FLOAT_ROUNDING_ERROR);
+	}
 }
